--- a/arch/arm64/configs/los15_defconfig
+++ b/arch/arm64/configs/los15_defconfig
@@ -1363,7 +1363,7 @@ CONFIG_MTK_SIM2_SOCKET_TYPE="1"
 CONFIG_MTK_BICR_SUPPORT=y
 CONFIG_MTK_VIDEO_HEVC_SUPPORT=y
 
-CONFIG_MTK_MIRAVISION_SUPPORT=y
+# CONFIG_MTK_MIRAVISION_SUPPORT is not set
 # CONFIG_MTK_AAL_SUPPORT is not set
 # CONFIG_MTK_MULTIBRIDGE_SUPPORT is not set
 CONFIG_NAND_OTP_SUPPORT=y
